--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "bootstrap-vue": "^2.22.0",
     "bootstrap-vue-3": "^0.3.7",
     "core-js": "^3.8.3",
-    "vue": "^3.2.40"
+    "vue": "^3.2.40",
+    "vue-axios": "^3.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
