--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "bootstrap-vue-3": "^0.3.7",
     "core-js": "^3.8.3",
     "vue": "^3.2.40",
-    "vue-axios": "^3.4.1"
+    "vue-axios": "^3.4.1",
+    "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
